; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/vcdcontroltool/extr_vcdcontroltool.c_SetServiceState.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/vcdcontroltool/extr_vcdcontroltool.c_SetServiceState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hDriverWnd = common dso_local global i32 0, align 4
@IDC_DRIVERSTART = common dso_local global i32 0, align 4
@IDC_DRIVERSTOP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetServiceState(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @hDriverWnd, align 4
  %6 = load i32, i32* @IDC_DRIVERSTART, align 4
  %7 = call i32 @GetDlgItem(i32 %5, i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i32 @EnableWindow(i32 %8, i32 %12)
  %14 = load i32, i32* @hDriverWnd, align 4
  %15 = load i32, i32* @IDC_DRIVERSTOP, align 4
  %16 = call i32 @GetDlgItem(i32 %14, i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @EnableWindow(i32 %17, i32 %18)
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @GetDlgItem(i32, i32) #1

declare dso_local i32 @EnableWindow(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
